[tool.poetry]
name = "ai-collection"
version = "0.1.0"
description = "Collection of AI related resources"
authors = ["Sean Chang"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.2.3"
mkdocs-material = "^7.3.6"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
